--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,17 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <section class="gallery-section">
+      <div class="container">
+        <form class="search-form js-search-form">
+          <input type="text" name="query" class="search-input" />
+          <button type="submit" class="search-btn">Search</button>
+        </form>
+        <ul class="gallery js-gallery"></ul>
+        <div id="tui-pagination-container" class="tui-pagination"></div>
+      </div>
+    </section>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
